--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -13,6 +13,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   --sbb-header-action-background-color: transparent;
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
   --sbb-header-action-min-width: var(--sbb-header-action-min-height);
+  --sbb-header-action-transition-duration: var(--sbb-animation-duration-2x);
+  --sbb-header-action-transition-easing: var(--sbb-animation-easing);
+  --sbb-header-action-border-color: transparent;
+  --sbb-header-action-background-inset: 0;
+  --sbb-header-action-translate-y: 0;
+  --sbb-header-action-gap: var(--sbb-spacing-fixed-2x);
 
   // The variable is assigned to the property in the sbb-header component if it is
   // the first element in the header and needs left offset correction (see sbb-header.scss).
@@ -44,8 +50,16 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 }
 
 @include sbb.hover-mq($hover: true) {
-  :host(:hover) {
+  :host(:hover:not(:active, [aria-expanded='true'])) {
     --sbb-header-action-background-color: var(--sbb-color-milk-default);
+    --sbb-header-action-translate-y: #{sbb.px-to-rem-build(-1)};
+    --sbb-header-action-background-inset: calc(var(--sbb-border-width-2x) * -1);
+
+    .sbb-header-action::before {
+      @include sbb.if-forced-colors {
+        --sbb-header-action-border-color: Highlight;
+      }
+    }
   }
 }
 
@@ -57,25 +71,47 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   @include sbb.button-reset;
   @include sbb.text-inherit;
 
-  text-decoration: none;
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
-  white-space: nowrap;
-  background-color: var(--sbb-header-action-background-color);
+  color: var(--sbb-color-black-default);
+  text-decoration: none;
   min-height: var(--sbb-header-action-min-height);
   min-width: var(--sbb-header-action-min-width);
   padding-inline: var(--sbb-header-action-padding-inline);
-  border-radius: var(--sbb-border-radius-16x);
-  transition-property: background-color;
-  transition-duration: var(--sbb-animation-duration-6x);
-  transition-timing-function: ease;
   cursor: pointer;
-  gap: var(--sbb-spacing-fixed-2x);
 
-  &:focus-visible {
+  &::before {
+    position: absolute;
+    content: '';
+    inset: var(--sbb-header-action-background-inset);
+    border-radius: var(--sbb-header-action-min-height);
+    background-color: var(--sbb-header-action-background-color);
+    transition-duration: var(--sbb-header-action-transition-duration);
+    transition-timing-function: var(--sbb-header-action-transition-easing);
+    transition-property: inset, background-color;
+    border: var(--sbb-border-width-1x) solid var(--sbb-header-action-border-color);
+
+    @include sbb.if-forced-colors {
+      --sbb-header-action-border-color: CanvasText;
+    }
+  }
+
+  &:focus-visible::before {
     @include sbb.focus-outline;
   }
+}
+
+.sbb-header-action__wrapper {
+  display: flex;
+  align-items: center;
+  gap: var(--sbb-header-action-gap);
+  white-space: nowrap;
+  transform: translateY(var(--sbb-header-action-translate-y));
+  transition: transform var(--sbb-header-action-transition-duration)
+    var(--sbb-header-action-transition-easing);
+  will-change: transform;
 }
 
 .sbb-header-action__icon {
@@ -86,14 +122,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   min-width: var(--sbb-size-icon-ui-small);
   min-height: var(--sbb-size-icon-ui-small);
   line-height: 0;
-  color: var(--sbb-color-black-default);
 }
 
 .sbb-header-action__text {
   @include sbb.text-xs--bold;
 
   display: var(--sbb-header-action-text-display);
-  color: var(--sbb-color-black-default);
 }
 
 .sbb-header-action__opens-in-new-window {
