--- a/src/components/sbb-navigation-section/sbb-navigation-section.scss
+++ b/src/components/sbb-navigation-section/sbb-navigation-section.scss
@@ -93,7 +93,7 @@
   inset-block-start: 0;
   width: var(--sbb-navigation-section-width);
   height: var(--sbb-navigation-section-height);
-  z-index: var(--sbb-navigation-z-index, 1000);
+  z-index: var(--sbb-navigation-z-index, var(--sbb-overlay-z-index));
 
   @include sbb.mq($from: large) {
     transform: translateX(calc(var(--sbb-grid-base-gutter-responsive) * -1));
