--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -83,12 +83,12 @@
       --sbb-radio-button-background-color: var(--sbb-color-red-default);
 
       border-width: #{sbb.px-to-rem-build(6)};
-    }
 
-    :host([data-group-disabled]) &,
-    :host([disabled]:not([disabled='false'])) & {
       @include sbb.if-forced-colors {
-        border-color: GrayText;
+        --sbb-radio-button-background-color: Highlight;
+
+        outline: var(--sbb-border-width-2x) solid Highlight;
+        border-color: Canvas;
       }
     }
 
@@ -96,6 +96,23 @@
     :host([data-group-disabled]) .sbb-radio-button__input:checked + &,
     :host([disabled]:not([disabled='false'])) .sbb-radio-button__input:checked + & {
       --sbb-radio-button-background-color: var(--sbb-color-graphite-default);
+
+      @include sbb.if-forced-colors {
+        --sbb-radio-button-background-color: GrayText;
+
+        outline-color: GrayText;
+        border-color: Canvas;
+      }
+    }
+
+    @include sbb.if-forced-colors {
+      transition: none;
+      border: var(--sbb-border-width-2x) solid ButtonBorder;
+
+      :host([data-group-disabled]) &,
+      :host([disabled]:not([disabled='false'])) & {
+        border-color: GrayText;
+      }
     }
   }
 }
