--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -7,6 +7,11 @@
 :host {
   // Overwrites logo in slotted and default case
   --sbb-logo-height: #{sbb.px-to-rem-build(16)};
+  --sbb-header-position: fixed;
+  --sbb-header-inset-block-start: 0;
+  --sbb-header-transition-duration: var(--sbb-animation-duration-6x);
+  --sbb-header-transition-property: box-shadow;
+  --sbb-header-transition-timing: cubic-bezier(0, 0, 0.2, 1);
 
   @include sbb.mq($from: medium) {
     --sbb-logo-height: #{sbb.px-to-rem-build(20)};
@@ -16,14 +21,34 @@
   height: var(--sbb-header-height);
 }
 
-.sbb-header {
-  position: fixed;
-  inset: 0 0 auto;
-  background: var(--sbb-color-white-default);
-  transition: box-shadow var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
-  z-index: 10;
+:host([hide-on-scroll]) {
+  --sbb-header-position: absolute;
+}
 
-  :host([shadow]:not([shadow='false'])) & {
+:host([hide-on-scroll][data-animated]) {
+  --sbb-header-transition-property: all;
+}
+
+:host([hide-on-scroll][data-fixed]) {
+  --sbb-header-position: fixed;
+  --sbb-header-inset-block-start: calc(var(--sbb-header-height) * -1);
+}
+
+:host([hide-on-scroll][data-fixed][data-visible]) {
+  --sbb-header-inset-block-start: 0;
+}
+
+.sbb-header {
+  position: var(--sbb-header-position);
+  inset: 0 0 auto;
+  inset-block-start: var(--sbb-header-inset-block-start);
+  background: var(--sbb-color-white-default);
+  z-index: 10;
+  transition-property: var(--sbb-header-transition-property);
+  transition-duration: var(--sbb-header-transition-duration);
+  transition-timing-function: var(--sbb-header-transition-timing);
+
+  :host([data-shadow]) & {
     @include sbb.shadow-level-9-soft;
   }
 
@@ -38,7 +63,6 @@
   justify-content: flex-start;
   height: var(--sbb-header-height);
 
-  /* stylelint-disable-next-line plugin/stylelint-bem-namics */
   :host(:not([expanded]:not([expanded='false']))) & {
     @include sbb.page-spacing;
   }
