--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -34,6 +34,10 @@
   --sbb-header-inset-block-start: calc(var(--sbb-header-height) * -1);
 }
 
+:host([hide-on-scroll][data-fixed][data-animated]) {
+  --sbb-header-transition-timing: cubic-bezier(0.4, 0, 1, 1);
+}
+
 :host([hide-on-scroll][data-fixed][data-visible]) {
   --sbb-header-inset-block-start: 0;
 }
