fix: fix hydrated loading state hiding (#1618)

--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -16,6 +16,11 @@ html {
   color: var(--sbb-color-metal-default);
 }
 
+// Hiding components until they are instantiated
+:is(sbb-dialog, sbb-navigation, sbb-menu, sbb-navigation-section, sbb-tooltip):not(.hydrated) {
+  display: none;
+}
+
 .sbb-text-xxs {
   @include typo.text-xxs--regular;
 }
