refactor: use more descriptive border radius for infinity border-radius

--- a/src/components/sbb-menu-action/sbb-menu-action.scss
+++ b/src/components/sbb-menu-action/sbb-menu-action.scss
@@ -5,7 +5,7 @@
 @include sbb.host-component-properties;
 
 :host {
-  --sbb-menu-action-border-radius: var(--sbb-border-radius-8x);
+  --sbb-menu-action-border-radius: var(--sbb-border-radius-infinity);
   --sbb-menu-action-outer-horizontal-padding: var(--sbb-spacing-fixed-3x);
   --sbb-menu-action-gap: var(--sbb-spacing-fixed-2x);
 }
@@ -74,4 +74,8 @@
 
 .sbb-menu-action__amount {
   @include sbb.badge;
+
+  margin-inline-start: auto;
+  width: var(--sbb-spacing-fixed-4x);
+  max-height: var(--sbb-spacing-fixed-4x);
 }
