--- a/src/components/sbb-toggle-option/sbb-toggle-option.scss
+++ b/src/components/sbb-toggle-option/sbb-toggle-option.scss
@@ -8,7 +8,7 @@
   --sbb-toggle-option-cursor: pointer;
   --sbb-toggle-option-color: var(--sbb-color-anthracite-default);
   --sbb-toggle-option-icon-min-size: var(--sbb-size-icon-ui-small);
-  --sbb-toggle-option-border-radius: var(--sbb-border-radius-16x);
+  --sbb-toggle-option-border-radius: var(--sbb-border-radius-infinity);
   --sbb-toggle-option-line-height: calc(1em * var(--sbb-typo-line-height-body-text));
 
   display: inline-block;
