--- a/src/global/styles/core/variables.scss
+++ b/src/global/styles/core/variables.scss
@@ -62,6 +62,12 @@
   // Overlay
   --sbb-overlay-z-index: 1000;
 
+  // Infinity border radius, can be used to achieve rounded border on start and end
+  --sbb-border-radius-infinity: 10000000em;
+  @supports #{'\(border-radius: calc(infinity * 1px))'} {
+    --sbb-border-radius-infinity: calc(1em * infinity);
+  }
+
   @include mediaqueries.mq($from: micro) {
     // Layout
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-micro);
