--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -30,7 +30,7 @@
   --sbb-button-shadow-1-color: var(--sbb-color-red-alpha-20);
   --sbb-button-shadow-2-color: var(--sbb-color-red125-alpha-20);
   --sbb-button-border-width: var(--sbb-border-width-2x);
-  --sbb-button-border-radius: var(--sbb-border-radius-16x);
+  --sbb-button-border-radius: var(--sbb-border-radius-infinity);
   --sbb-button-min-height: var(--sbb-size-button-l-min-height);
   --sbb-button-transition-duration: var(--sbb-animation-duration-2x);
   --sbb-button-transition-easing-function: var(--sbb-animation-easing);
