--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -30,7 +30,7 @@
 
 :host([hide-on-scroll][data-fixed]) {
   --sbb-header-position: fixed;
-  --sbb-header-inset-block-start: calc(var(--sbb-header-height) * -1);
+  --sbb-header-transform-y: translateY(-100%);
 }
 
 :host([hide-on-scroll][data-fixed][data-animated]) {
@@ -39,7 +39,7 @@
 }
 
 :host([hide-on-scroll][data-fixed][data-visible]) {
-  --sbb-header-inset-block-start: 0;
+  --sbb-header-transform-y: translateY(0);
 
   // Show transition
   --sbb-header-transition-timing: cubic-bezier(0, 0, 0.2, 1);
