--- a/src/components/sbb-image/sbb-image.scss
+++ b/src/components/sbb-image/sbb-image.scss
@@ -24,13 +24,24 @@
   inset: 0;
 }
 
+// After successful loading an image, the loaded image is faded in over the blurred lqip image with a short transition.
+// To support transparent images, we need also to fade out the blurred lqip image.
+// This is not perfect in the case of a non transparent image, but does not look that obviously bad.
+.image__figure .image__img,
+.image__figure .image__blur-hash {
+  transition: opacity var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
+}
+
 .image__figure .image__img {
   opacity: 0.000001;
-  transition: opacity var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
 }
 
 .image__figure--loaded .image__img {
   opacity: 0.999999;
+}
+
+.image__figure--loaded .image__blur-hash {
+  opacity: 0;
 }
 
 .image__wrapper {
