--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -11,7 +11,6 @@
   --sbb-header-inset-block-start: 0;
   --sbb-header-transition-duration: var(--sbb-animation-duration-6x);
   --sbb-header-transition-property: box-shadow;
-  --sbb-header-transition-timing: cubic-bezier(0, 0, 0.2, 1);
 
   @include sbb.mq($from: medium) {
     --sbb-logo-height: #{sbb.px-to-rem-build(20)};
@@ -34,8 +33,16 @@
   --sbb-header-inset-block-start: calc(var(--sbb-header-height) * -1);
 }
 
+:host([hide-on-scroll][data-fixed][data-animated]) {
+  // Hide transition
+  --sbb-header-transition-timing: cubic-bezier(0.4, 0, 1, 1);
+}
+
 :host([hide-on-scroll][data-fixed][data-visible]) {
   --sbb-header-inset-block-start: 0;
+
+  // Show transition
+  --sbb-header-transition-timing: cubic-bezier(0, 0, 0.2, 1);
 }
 
 .sbb-header {
