--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -8,9 +8,7 @@
   // Overwrites logo in slotted and default case
   --sbb-logo-height: #{sbb.px-to-rem-build(16)};
   --sbb-header-position: fixed;
-  --sbb-header-inset-block-start: 0;
   --sbb-header-transition-duration: var(--sbb-animation-duration-6x);
-  --sbb-header-transition-property: box-shadow;
 
   @include sbb.mq($from: medium) {
     --sbb-logo-height: #{sbb.px-to-rem-build(20)};
@@ -24,13 +22,10 @@
   --sbb-header-position: absolute;
 }
 
-:host([hide-on-scroll][data-animated]) {
-  --sbb-header-transition-property: all;
-}
-
 :host([hide-on-scroll][data-fixed]) {
   --sbb-header-position: fixed;
-  --sbb-header-inset-block-start: calc(var(--sbb-header-height) * -1);
+  --sbb-header-animation-name: hide;
+  --sbb-header-transform: translate3d(0, -100%, 0);
 }
 
 :host([hide-on-scroll][data-fixed][data-animated]) {
@@ -39,7 +34,8 @@
 }
 
 :host([hide-on-scroll][data-fixed][data-visible]) {
-  --sbb-header-inset-block-start: 0;
+  --sbb-header-animation-name: show;
+  --sbb-header-transform: translate3d(0, 0, 0);
 
   // Show transition
   --sbb-header-transition-timing: cubic-bezier(0, 0, 0.2, 1);
@@ -48,12 +44,19 @@
 .sbb-header {
   position: var(--sbb-header-position);
   inset: 0 0 auto;
-  inset-block-start: var(--sbb-header-inset-block-start);
   background: var(--sbb-color-white-default);
   z-index: 10;
-  transition-property: var(--sbb-header-transition-property);
-  transition-duration: var(--sbb-header-transition-duration);
-  transition-timing-function: var(--sbb-header-transition-timing);
+  transform: var(--sbb-header-transform);
+  transition: {
+    property: box-shadow;
+    duration: var(--sbb-header-transition-duration);
+    timing-function: var(--sbb-header-transition-timing);
+  }
+  animation: {
+    name: var(--sbb-header-animation-name);
+    duration: var(--sbb-header-transition-duration);
+    timing-function: var(--sbb-header-transition-timing);
+  }
 
   :host([data-shadow]) & {
     @include sbb.shadow-level-9-soft;
@@ -112,4 +115,24 @@
 
   // As if the outline has an offset, the border radius increases, we set it to the smallest possible border-radius.
   border-radius: 0.1px;
+}
+
+@keyframes show {
+  from {
+    transform: translate3d(0, -100%, 0);
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes hide {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    transform: translate3d(0, -100%, 0);
+  }
 }
