--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -9,6 +9,7 @@
   --sbb-logo-height: #{sbb.px-to-rem-build(16)};
   --sbb-header-position: fixed;
   --sbb-header-transition-duration: var(--sbb-animation-duration-6x);
+  --sbb-header-inset-inline-end: 0;
 
   @include sbb.mq($from: medium) {
     --sbb-logo-height: #{sbb.px-to-rem-build(20)};
@@ -26,6 +27,7 @@
   --sbb-header-position: fixed;
   --sbb-header-animation-name: hide;
   --sbb-header-transform: translate3d(0, -100%, 0);
+  --sbb-header-inset-inline-end: var(--sbb-scrollbar-width, 0);
 }
 
 :host([hide-on-scroll][data-fixed][data-animated]) {
@@ -43,7 +45,7 @@
 
 .sbb-header {
   position: var(--sbb-header-position);
-  inset: 0 0 auto;
+  inset: 0 var(--sbb-header-inset-inline-end) auto 0;
   background: var(--sbb-color-white-default);
   z-index: var(--sbb-header-z-index, 10);
   transform: var(--sbb-header-transform);
