fix(badge): set color of badge

--- a/src/global/styles/mixins/badge.scss
+++ b/src/global/styles/mixins/badge.scss
@@ -9,5 +9,6 @@
   padding-inline: var(--sbb-spacing-fixed-1x);
   border-radius: var(--sbb-border-radius-infinity);
   background-color: var(--sbb-color-red-default);
+  color: var(--sbb-color-white-default);
   min-width: fit-content;
 }
