--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -19,7 +19,6 @@
   --sbb-menu-min-height: #{sbb.px-to-rem-build(120)};
   --sbb-menu-border-radius: var(--sbb-border-radius-4x);
   --sbb-menu-visibility: hidden;
-  --sbb-menu-pointer-events: none;
   --sbb-menu-backdrop-color: transparent;
 
   // We use this rule to make the inner container element to appear as if it were a
@@ -36,7 +35,6 @@
 
 :host(:is([data-state='opened'], [data-state='opening'])) {
   --sbb-menu-visibility: visible;
-  --sbb-menu-pointer-events: all;
   --sbb-menu-backdrop-color: var(--sbb-color-black-alpha-20);
 
   @include sbb.mq($from: medium) {
@@ -74,7 +72,7 @@
   &::before {
     content: '';
     visibility: var(--sbb-menu-visibility);
-    pointer-events: var(--sbb-menu-pointer-events);
+    pointer-events: all;
     position: fixed;
     inset: var(--sbb-menu-inset);
     height: 100dvh;
