--- a/src/global/styles/typography.scss
+++ b/src/global/styles/typography.scss
@@ -11,6 +11,14 @@ html {
   color: var(--sbb-font-default-color);
 }
 
+sub {
+  @include typo.sub;
+}
+
+sup {
+  @include typo.sup;
+}
+
 // TODO: Remove if webkit bug is resolved: https://bugs.webkit.org/show_bug.cgi?id=223814
 ::placeholder {
   color: var(--sbb-color-metal-default);
