fix(sbb-footer): define default font styles and fix accessibility

--- a/src/storybook/pages/home/home.scss
+++ b/src/storybook/pages/home/home.scss
@@ -201,6 +201,14 @@ section sbb-title {
   margin-block: var(--sbb-spacing-responsive-l);
 }
 
+.footer-title {
+  margin: 0 0 var(--sbb-spacing-fixed-3x);
+}
+
+.footer-text {
+  margin: 0;
+}
+
 /*
   Common classes
  */
