--- a/src/components/sbb-navigation/sbb-navigation.scss
+++ b/src/components/sbb-navigation/sbb-navigation.scss
@@ -31,6 +31,8 @@
   --sbb-navigation-width: 100%;
   --sbb-navigation-height: 100vh;
 
+  // Needed for backwards compatibility on Chromatic
+  // TODO: Remove once not needed
   @supports (height: 100dvh) {
     --sbb-navigation-height: 100dvh;
   }
@@ -81,8 +83,14 @@
   --sbb-navigation-content-transform: translateX(-100%);
 
   @include sbb.mq($from: 'large') {
-    --sbb-navigation-expanded-width: 100dvw;
+    --sbb-navigation-expanded-width: 100vw;
     --sbb-navigation-content-transform: translateX(0%);
+
+    // Needed for backwards compatibility on Chromatic
+    // TODO: Remove once not needed
+    @supports (height: 100dvw) {
+      --sbb-navigation-expanded-width: 100dvw;
+    }
   }
 }
 
