--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -13,6 +13,13 @@
   --sbb-menu-max-width: 100%;
   --sbb-menu-min-width: 100%;
   --sbb-menu-inset: 0 auto auto 0;
+  --sbb-menu-container-height: 100vh;
+
+  // Needed for backwards compatibility on Chromatic
+  // TODO: Remove once not needed
+  @supports (height: 100dvh) {
+    --sbb-menu-container-height: 100dvh;
+  }
 
   // 85vh is not an exact value but looks optimized for mobile view.
   --sbb-menu-max-height: calc(85vh - var(--sbb-spacing-fixed-8x));
@@ -65,7 +72,7 @@
   position: fixed;
   pointer-events: none;
   inset: var(--sbb-menu-inset);
-  height: 100dvh;
+  height: var(--sbb-menu-container-height);
   z-index: var(--sbb-menu-z-index, var(--sbb-overlay-z-index));
 
   // Menu backdrop (only visible on mobile)
@@ -75,7 +82,7 @@
     pointer-events: all;
     position: fixed;
     inset: var(--sbb-menu-inset);
-    height: 100dvh;
+    height: var(--sbb-menu-container-height);
     background-color: var(--sbb-menu-backdrop-color);
     transition: {
       duration: var(--sbb-menu-animation-duration);
