--- a/src/components/sbb-footer/sbb-footer.scss
+++ b/src/components/sbb-footer/sbb-footer.scss
@@ -9,6 +9,7 @@
   --sbb-footer-gap-vertical: var(--sbb-spacing-responsive-l);
   --sbb-footer-background-color: var(--sbb-color-milk-default);
   --sbb-footer-clock-width: #{sbb.px-to-rem-build(76)};
+  --sbb-footer-color: var(--sbb-color-granite-default);
 
   @include sbb.mq($from: small) {
     --sbb-footer-clock-width: #{sbb.px-to-rem-build(112)};
@@ -17,9 +18,14 @@
 
 :host([negative]:not([negative='false'])) {
   --sbb-footer-background-color: var(--sbb-color-charcoal-default);
+  --sbb-footer-color: var(--sbb-color-white-default);
 }
 
 .sbb-footer {
+  // Include text style and color as fallback for paragraph texts inside the footer.
+  @include sbb.text-s--regular;
+
+  color: var(--sbb-footer-color);
   padding-block: var(--sbb-spacing-responsive-l);
   background-color: var(--sbb-footer-background-color);
 
