--- a/src/components/sbb-header-action/sbb-header-action.scss
+++ b/src/components/sbb-header-action/sbb-header-action.scss
@@ -8,7 +8,6 @@
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host {
-  --sbb-header-action-text-display: none;
   --sbb-header-action-padding-inline: 0;
   --sbb-header-action-background-color: transparent;
   --sbb-header-action-min-height: var(--sbb-size-button-m-min-height);
@@ -34,19 +33,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
   display: inline-block;
 }
 
-@each $breakpoint in $breakpoints {
-  :host([expand-from='#{$breakpoint}']) {
-    @include sbb.mq($from: $breakpoint) {
-      --sbb-header-action-text-display: block;
-      --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
+:host([data-expanded]) {
+  --sbb-header-action-padding-inline: var(--sbb-spacing-fixed-5x);
 
-      // If expanded, move it left by left padding.
-      // As result, the icon should be aligned with the left side of the page wrapper.
-      --sbb-header-first-item-margin-inline-start: calc(
-        -1 * var(--sbb-header-action-padding-inline)
-      );
-    }
-  }
+  // If expanded, move it left by left padding.
+  // As result, the icon should be aligned with the left side of the page wrapper.
+  --sbb-header-first-item-margin-inline-start: calc(-1 * var(--sbb-header-action-padding-inline));
 }
 
 @include sbb.hover-mq($hover: true) {
@@ -127,7 +119,11 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 .sbb-header-action__text {
   @include sbb.text-xs--bold;
 
-  display: var(--sbb-header-action-text-display);
+  display: block;
+
+  :host(:not([data-expanded])) & {
+    @include sbb.screen-reader-only;
+  }
 }
 
 .sbb-header-action__opens-in-new-window {
