--- a/src/components/sbb-link/sbb-link.scss
+++ b/src/components/sbb-link/sbb-link.scss
@@ -10,6 +10,7 @@
 
   display: inline-block;
   color: inherit;
+  outline: none;
 
   @include sbb.link-variables;
 
@@ -43,6 +44,12 @@
   width: 100%;
   cursor: pointer;
 
+  :host(:focus-visible) & {
+    @include sbb.focus-outline;
+
+    border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
+  }
+
   :host([variant='inline']) & {
     @include sbb.link-inline-base;
   }
@@ -58,8 +65,6 @@
   :host([size='m']:not([variant='inline'])) & {
     @include sbb.text-m--regular;
   }
-
-  @include sbb.link-focus-visible;
 
   :host([disabled]:not([disabled='false'])) & {
     pointer-events: none;
