fix(sbb-tab-group): remove unwanted space between tabs
Depending on which HTML tag for content was used, it displayed the margin of it.
By adding overflow:hidden, the additional space is hidden.

--- a/src/components/sbb-tab-group/sbb-tab-group.scss
+++ b/src/components/sbb-tab-group/sbb-tab-group.scss
@@ -18,6 +18,7 @@
     visibility: hidden;
     opacity: 0;
     height: 0;
+    overflow: hidden;
   }
 
   ::slotted(*[active]:not([active='false'])) {
