feat: improve stories

--- a/src/components/sbb-selection-panel/sbb-selection-panel.scss
+++ b/src/components/sbb-selection-panel/sbb-selection-panel.scss
@@ -22,6 +22,10 @@
   --sbb-selection-panel-border-color: var(--sbb-color-charcoal-default);
 }
 
+:host([data-has-content][data-disabled]:not([data-disabled='false'])) {
+  --sbb-selection-panel-border-color: var(--sbb-color-cloud-default);
+}
+
 :host([data-disabled]:not([data-disabled='false'])) {
   --sbb-selection-panel-cursor: default;
   --sbb-selection-panel-badge-background: var(--sbb-color-smoke-default);
