--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -12,14 +12,13 @@
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 
 :host {
-  --sbb-radio-button-group-width: max-content;
-
   @include horizontal-orientation;
 }
 
 :host([orientation='vertical']) {
   --sbb-radio-button-group-orientation: column;
   --sbb-radio-button-group-gap: var(--sbb-spacing-fixed-3x);
+  --sbb-radio-button-group-width: 100%;
 }
 
 :host([data-has-selection-panel]) {
@@ -36,6 +35,12 @@ $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
     // horizontal-from overrides orientation vertical
     :host([orientation='vertical'][horizontal-from='#{$breakpoint}']) {
       @include horizontal-orientation;
+    }
+
+    :host(
+        [orientation='vertical'][horizontal-from='#{$breakpoint}']:not([data-has-selection-panel])
+      ) {
+      --sbb-radio-button-group-width: max-content;
     }
   }
 }
