feat: improve accessibility

--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -188,3 +188,7 @@ input[type='checkbox']:focus-visible + .sbb-checkbox__inner {
     }
   }
 }
+
+span[data-selection-panel-expanded] {
+  @include sbb.screen-reader-only;
+}
